@@ -177,6 +177,7 @@ typedef void (* RGFW_keyfunc)(RGFW_window* win, u8 key, u8 keyChar, RGFW_keymod 
 - add `RGFW_menu`
 - add `RGFW_world1` and `RGFW_world2`
 - add `RGFW_window_getEnabledEvents`,  `RGFW_window_setDisabledEvents` and `RGFW_window_setDisabledEvents`
+- (X11) merge createContxt_OpenGL and createVisual_OpenGL
 
 Release:    RGFW 1.7 (May 6, 2025)
 -----------------------------------------------
